fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -228,6 +228,9 @@ img {
     align-items: start;
     text-align: start;
 }
+#news h1{
+    text-align: start;
+}
 
 .news-card {
     background-color: #FFFFFF;
@@ -364,5 +367,32 @@ section p {
 }
 
 .other-amount input::placeholder {
-    text-align: center; /* Center the placeholder text */
+    text-align: center;
+}
+
+.foot{
+    background-color: #c6e4d6;
+    text-align: center;
+    margin: 40px auto;
+    border-radius: 10px;
+    padding: 40px;
+    max-width: 1200px;
+    gap: 40px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
+
+.foot input{
+    width: 60%;
+    box-sizing: border-box;
+    height: 40px;
+    text-align: center;
+    padding: 0 10px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+
+.foot input::placeholder {
+    text-align: center;
 }
